fix(style): stop page from jumping around

--- a/ui/styles/legacy/browser-resets.css
+++ b/ui/styles/legacy/browser-resets.css
@@ -10,6 +10,8 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
 }
 
 article,
