--- a/ui/styles/legacy/global.css
+++ b/ui/styles/legacy/global.css
@@ -8,7 +8,7 @@
 
 *,:after,:before{box-sizing:border-box;shape-rendering:geometricPrecision}
 
-html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0)}
+html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);overflow:-moz-scrollbars-vertical;overflow-y:scroll}
 
 article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}
 
